# Scientific-research

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_MEMORY.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  STATUS.md  USER_GUIDE.en.md  USER_GUIDE.md  WEB_GUIDE.md  handoff.md  install_windows.bat  pyproject.toml  start_web.bat
.github/: PULL_REQUEST_TEMPLATE.md
examples/: README.md  chapter.md  simulation-result.csv
miniprogram/: app.json  app.ts  app.wxss  project.config.json
tests/: __init__.py  test_bootstrap.py  test_demo_project.py  test_end_to_end_workflow.py  test_figure_export.py  test_library.py  test_literature_discovery.py  test_literature_map.py  test_literature_table.py  test_literature_tracker.py  test_manuscript.py  test_miniprogram_assets.py  test_mobile_app.py  test_mobile_responses.py  test_notes.py  test_project_report.py  test_release_package.py  test_screenshot_assets.py  test_simulation_bridge.py  test_web_app.py  test_windows_installer.py  test_workflow_contract.py  test_writing_dashboard.py  test_writing_pack.py
tools/: build_windows_release.py  capture_web_screenshots.js  check_js_syntax.py  check_release_package.py  check_release_readiness.py  smoke_test_windows_release.py
workflow/: bootstrap.py  cli.py  commands.py  figure-factory.md  library.py  literature_discovery.py  literature_intake.md  literature_map.py  literature_table.py  literature_tracker.py  manuscript-authoring.md  manuscript.py  mobile_app.py  mobile_responses.py  notes.py  project_report.py  reading-and-notes.md  simulation-bridge.md  simulation.py  web_actions.py  web_app.py  writing_dashboard.py  writing_pack.py
(+52 files in other folders)
